# omni-auditor

./: .coverage  .coveragerc  .dockerignore  .gitignore  AGENTS.md  BENCHMARKS.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  benchmark_results.json  bump-version.py  coverage.xml  dashboard.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_benchmark.py  run_real_benchmark.py  test_sample.py
.github/workflows/: ci.yml
benchmarks/: README.md  benchmark.py  collect_dataset.py  ground_truth.json  raw_results.json
github-app/: Dockerfile  __init__.py  analyzer.py  baseline.py  commenter.py  config.py  main.py  requirements.txt
github-app/tests/: __init__.py  test_analyzer.py  test_commenter.py  test_webhook.py
saas/: SPEC.md  plan.md
saas/app-dist/: index.html
saas/app-new/: package-lock.json
saas/frontend/: index.html  tailwind.config.js
saas/frontend/src/: App.tsx  (+1 more)
src/: __init__.py  cli.py  fusion.py  main.py  sarif_exporter.py  ui.py
src/engine/: __init__.py  analyzer.py  baseline.py  diff.py  security.py  validator.py
src/reporting/: json_exporter.py
tests/: test_analyzer.py  test_baseline.py  test_diff.py  test_integration.py  test_main.py  test_sarif_exporter.py  test_security.py  test_validator.py
tests/benchmarks/: analyze_results.py  calibrate.py  compare.py  fetch_dataset.py  run_benchmark.bat
tools/: README.md  dashboard.py  run_benchmark.py
vscode/: launch.json
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts  types.ts
(+367 files in other folders)
