[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omni-auditor"
version = "0.1.0"
description = "Research-grade static analysis engine combining Spectral Graph Theory, Rényi Entropy, and Mahalanobis Distance."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "rich>=13.0.0",
]

[project.scripts]
omni-auditor = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*"]
